Fix zoom bleed on team photos by adding overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,7 @@
     min-block-size: 0;
     margin: 0;
     width: 100%;
+    overflow: hidden;
   }
 
   .team-main-photo img {
@@ -2635,6 +2636,7 @@
     transform: none !important;
     left: 0 !important;
     right: 0 !important;
+    overflow: hidden !important;
   }
 
   .team-preview::before,
